Add order shipment and search orders API functionality